# otus-algo

./: .gitignore  .pre-commit-config.yaml  5x8.py  CMakeLists.txt  CMakelists.txt  README.md  barn.py  bitcount.py  bobs.py  burn_report.md  cast.py  chess.py  fibo.py  file_sort.py  fir.py  folder_test.py  islands.py  multi_func_tester.py  mytimer.py  power.py  primes.py  pyproject.toml  report_all.md  setup.cfg  simple_sort.py  sort_bubble.py  sort_insertion.py  sort_quick.py  sort_selection.py  sort_shell.py  string.py  test_all.py  test_file_sort.py  test_quick_sort.py  test_selection_sort.py  test_simple_sort.py  tickets.py  timer.py
avl/: CMakeLists.txt  bstree.hpp  main.cpp  splay.hpp  test_base.h  test_splay.h
bloom/: bloom.py  bloom_test.py  primes.py
hashtable/: CMakeLists.txt  cuckoo_hashtable.h  cuckoo_traits.h  deq_location.hpp  hash_table.h  location.h  optlog.h  test_hashtable.cpp
kosaraju/: .gitignore  pyproject.toml
kosaraju/kosaraju/: __init__.py  traverse.py
kosaraju/tests/: test_kosaraju.py
myarray/: expand_array.h  interface_array.h  matrix_array.h  myarray.h  pretty.h  stdvector_array.h
mygraph/: __init__.py  demucron.py  heap_queue.py  kruskal.py  mst.py  path.py  traverse.py
python/: CMakeLists.txt  array.cpp  myarray.cpp
report/: fibo_report.md  power_report.md  primes_report.md  report.md  report_all.md  report_file_sort.md  report_insertion_and_heap.md  report_old.md  report_quick_and_merge_sort.md  result.xlsx  result_myarray.md
src/: main.cpp  rle.cpp  rle.h  version.h.in
strings/: __init__.py  find.py  kmp.py
test/: test.cpp
test_app/: CMakeLists.txt  alice.txt  main.cpp  profiler.h  war_and_peace.txt
test_libarray/: CMakeLists.txt  main.cpp  test_base.h  test_helpers.h  test_internal.h  test_profile.h
test_myarray/: test_myarray.py
tests/: folder_test.py  multi_func_tester.py  test.py  test_all.py  test_demucron.py  test_kosaraju.py  test_kruskal.py  test_mst.py  test_path.py
tests/data/: test.0.in  test.1.in  test.2.in  test.3.in  test.4.in  test.4.out  test.5.in
tests/unpacked/: data_test_text.txt
tools/: locale.h  profiler.h  test_helpers.h
tree/: CMakeLists.txt  avltree.hpp  splay.hpp  test_avl.h  test_base.h  test_profile.h
utest/: CMakeLists.txt  aclass.h  bclass.h  test_cuckoo.cpp  test_hashtable.cpp  test_location.cpp
